Fix 100vh issues on mobile with 100svh

--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ html {
 body {
   font-family: 'Open Sans', 'Lucida Grande', tahoma, verdana, arial, sans-serif;
   height: 100vh;
+  height: 100svh;
   background: #f1f2f5;
   display: flex;
   align-items: center;
